objects/Tkt_profile__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLN_Company__c</fullName>
        <label>BLN Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>BLN TKT profile</relationshipLabel>
        <relationshipName>BLN_TKT_profile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_GN_User__c</fullName>
        <label>BLN GN User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipLabel>BLN TKT profile</relationshipLabel>
        <relationshipName>BLN_TKT_profile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <referenceTo>BLN_Address__c</referenceTo>
        <relationshipLabel>BLN TKT profile (Billing Address)</relationshipLabel>
        <relationshipName>BLN_TKT_profile2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Blog_URL__c</fullName>
        <label>Blog URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Blogger__c</fullName>
        <label>Blogger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Logo__c</fullName>
        <label>Company Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Website_URL__c</fullName>
        <label>Company Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duns_Number__c</fullName>
        <label>Duns Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Established_Date__c</fullName>
        <label>Established Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceptional_Keywords__c</fullName>
        <label>Exceptional Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FaceBookId__c</fullName>
        <label>FaceBookId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FourSquareId__c</fullName>
        <label>FourSquareId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <referenceTo>BLN_Address__c</referenceTo>
        <relationshipLabel>BLN TKT profile</relationshipLabel>
        <relationshipName>BLN_TKT_profile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedInId__c</fullName>
        <label>LinkedInId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <label>Number Of Employees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Category__c</fullName>
        <label>Primary Business Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines/Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Dispute Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts and Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation &amp; Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Supplies and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic &amp; Social Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; Network Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Business_Category__c</fullName>
        <label>Secondary Business Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines/Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Dispute Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts and Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation &amp; Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Supplies and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic &amp; Social Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; Network Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <referenceTo>BLN_Address__c</referenceTo>
        <relationshipLabel>BLN TKT profile (Shipping Address)</relationshipLabel>
        <relationshipName>BLN_TKT_profile3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TKT_Company__c</fullName>
        <label>TKT Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TKT_Job_Title__c</fullName>
        <label>TKT Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <label>Tax Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwitterId__c</fullName>
        <label>TwitterId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Pic__c</fullName>
        <label>User Pic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <label>Video</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Address__c</fullName>
        <label>Work Address</label>
        <referenceTo>BLN_Address__c</referenceTo>
        <relationshipLabel>BLN TKT profile (Work Address)</relationshipLabel>
        <relationshipName>BLN_TKT_profile1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <label>BLN TKT profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{0000000}</displayFormat>
        <label>tkt profile</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN TKT profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>